crates/hid-cammus-protocol/tests/snapshots/snapshot_encoding__snapshot_encode_torque_above_one_clamps.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_encoding.rs
expression: report
---
[
    1,
    255,
    127,
    1,
    0,
    0,
    0,
    0,
]
