crates/hid-cammus-protocol/tests/snapshots/snapshot_encoding__snapshot_encode_torque_below_neg_one_clamps.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_encoding.rs
expression: report
---
[
    1,
    1,
    128,
    1,
    0,
    0,
    0,
    0,
]
