crates/hid-cammus-protocol/tests/snapshots/snapshot_encoding__snapshot_encode_torque_half_negative.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_encoding.rs
expression: report
---
[
    1,
    1,
    192,
    1,
    0,
    0,
    0,
    0,
]
