crates/hid-cammus-protocol/tests/snapshots/snapshot_encoding__snapshot_model_from_pid_c12.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_encoding.rs
expression: "format!(\"{model:?}\")"
---
"Some(C12)"
