crates/hid-cammus-protocol/tests/snapshots/snapshot_encoding__snapshot_model_from_pid_c5.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_encoding.rs
expression: "format!(\"{model:?}\")"
---
"Some(C5)"
