crates/hid-cammus-protocol/tests/snapshots/snapshot_encoding__snapshot_model_from_pid_lc100_pedals.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_encoding.rs
assertion_line: 59
expression: "format!(\"{model:?}\")"
---
"Some(Lc100Pedals)"
