crates/hid-cammus-protocol/tests/snapshots/snapshot_encoding__snapshot_parse_min_length_boundary.snap
---
source: crates/hid-cammus-protocol/tests/snapshot_encoding.rs
expression: "format!(\"{err}\")"
---
"report too short: got 7 bytes, need 12"
